examples/test/testpolicy12493.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12493
  namespace: namespace337
spec:
  podSelector:
    matchLabels:
      key49: value12
      key32: value15
      key47: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value3
      podSelector:
        matchLabels:
          key11: value35
          key21: value15
          key48: value38
